refactor try to upgrade to Java 17